--- a/.travis.yml
+++ b/.travis.yml
@@ -58,8 +58,8 @@ jobs:
       api_key:
         secure: Kh3FkAxlQYDuL9WsEUDlDeiYcZ9Ax9QvLfmnVqeDx6bb2DSZP+UBbtXvNKFQ4UgCLezyUlmWLcr64R5Y/4xuaN+p8G9CKT5OA1Z+WY1KAgI1FlwQWCxnG9RJMuxZ0QzPW3LjSeHREM8N7pwgxnEvN3HZKNUB1tm+o8llXMSjGdg=
       file: macOS/Gaphor.dmg
-      on:
-        tags: true
+#      on:
+#        tags: true
 
   - stage: lint
     os: linux
